<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/select_an_incident"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.85"
                android:paddingBottom="20sp"
                android:paddingEnd="10sp"
                android:paddingStart="10sp"
                android:paddingTop="10sp"
                android:text="@string/select_an_incident"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="81dp" />

            <RadioGroup
                android:id="@+id/incident_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.85"
                android:dividerPadding="20dp"
                android:weightSum="1"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="106dp">

                <RadioButton
                    android:id="@+id/incident_type_bullying"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:layout_weight="0.85"
                    android:text="@string/bullying"
                    android:textAlignment="viewStart"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/incident_type_fighting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:layout_weight="0.85"
                    android:text="@string/fighting"
                    android:textAlignment="viewStart"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/incident_type_drugs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:text="@string/drugs"
                    android:textAlignment="viewStart"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/type_of_incident_power"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:layout_weight="0.85"
                    android:text="@string/abuse_of_power"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/incident_type_other"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:layout_weight="0.85"
                    android:text="@string/other"
                    android:textSize="20sp" />

            </RadioGroup>

            <TextView
                android:id="@+id/select_school"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.85"
                android:paddingBottom="20dp"
                android:paddingEnd="10sp"
                android:paddingStart="10sp"
                android:text="@string/school_selection"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="81dp" />

            <Spinner
                android:id="@+id/school_spinner"
                android:layout_width="284dp"
                android:layout_height="match_parent"
                android:elevation="0dp"
                android:paddingBottom="20sp"
                android:spinnerMode="dialog"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp" />

            <EditText
                android:id="@+id/description_of_incident"
                android:layout_width="312dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/description_of_incident"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/select_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Select Image from Gallery" />

        </LinearLayout>

</ScrollView>